# jumia

./: .gitignore  Readme.md  env.example  pyproject.toml  start.ps1
config/: categories.yaml  rules.yaml
src/jumia_feed_sync/: bootstrap.py  cli.py  config.py  db.py  export.py  image.py  ingest.py  mapping.py  models.py  pipeline.py  resolve.py  rules.py
src/jumia_feed_sync/dashboard/: app.py
src/jumia_feed_sync/dashboard/templates/: _detail.html  _edit_form.html  _edit_saved.html  _export_result.html  _grid.html  _resolved_confirmation.html  _run_status.html  _suggestions.html  base.html  review.html  run.html  unresolved.html
src/jumia_feed_sync/migrations/: 001_initial.sql
tests/: conftest.py  test_bootstrap.py  test_dashboard.py  test_export.py  test_export_golden.py  test_image.py  test_ingest.py  test_mapping.py  test_models.py  test_pipeline.py  test_resolve.py  test_rules.py
tests/fixtures/: sample_feed.xml
