[project]
name = "jumia-feed-sync"
version = "0.1.0"
description = "Feed -> Jumia upload template sync: ingest, resolve, validate, review, export"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "lxml>=5.2",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "simpleeval>=0.9",
    "rapidfuzz>=3.9",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pillow>=10.3",
    "fastapi>=0.111",
    "jinja2>=3.1",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.scripts]
jumia-feed-sync = "jumia_feed_sync.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"
